crates/core/dep-graph/tests/snapshots/dep_graph_test__run_target_if_touched__skips_if_untouched_task.snap
---
source: crates/core/dep-graph/tests/dep_graph_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    1 [ label="SetupNodeTool(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 [ label="InstallNodeDeps(16.0.0)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    3 [ label="SyncNodeProject(inputB)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    4 [ label="RunTarget(inputB:b2)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    5 [ label="SyncNodeProject(inputC)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    6 [ label="RunTarget(inputC:c)" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    2 -> 1 [ arrowhead=box, arrowtail=box]
    3 -> 1 [ arrowhead=box, arrowtail=box]
    4 -> 2 [ arrowhead=box, arrowtail=box]
    4 -> 3 [ arrowhead=box, arrowtail=box]
    5 -> 1 [ arrowhead=box, arrowtail=box]
    6 -> 2 [ arrowhead=box, arrowtail=box]
    6 -> 5 [ arrowhead=box, arrowtail=box]
}

